# piHome

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  setup-cross-compile.sh
piHome/: CMakeLists.txt
piHome/app/: CMakeLists.txt  main.cpp  piHome.cpp  piHome.h
piHome/core/: CMakeLists.txt  core-config.cmake.in
piHome/core/include/pihome/networks/: client.h  server.h
piHome/core/include/pihome/sensors/: dht11.h  ipcamera.h  mq135.h
piHome/core/src/networks/: CMakeLists.txt  client.cpp  server.cpp
piHome/core/src/sensors/: dht11.cpp  ipcamera.cpp  mq135.cpp  pir.cpp
piHome/include/pihome/networks/: client.h
piHome/include/pihome/sensors/: camera.h  ipcamera.h  pir.h  raspicamera.h  sensor.h
piHome/src/: piHome.cpp  piHome.h
piHome/src/networking/: client.h  server.cpp
piHome/src/networks/: CMakeLists.txt  client.cpp  server.cpp
piHome/src/sensors/: camera.cpp  camera.h  dht11.cpp  dht11.h  ipcamera.cpp  mq135.cpp  pir.cpp  raspicamera.cpp  raspicamera.h
piHome/zero/: CMakeLists.txt  main.cpp
src/: main.cpp  piHome.cpp  piHome.h
src/networking/: client.cpp  server.cpp  server.h
src/sensors/: camera.cpp  camera.h  dht11.cpp  dht11.h  mq135.cpp  mq135.h  pir.cpp  pir.h  sensor.h
toolchain/: pi.cmake
